@@ -177,6 +177,11 @@ namespace Dwm {
       }
 
       //----------------------------------------------------------------------
+      //!  Returns true if a Receive() of @c numBytes or greater would block.
+      //----------------------------------------------------------------------
+      bool ReceiveWouldBlock(size_t numBytes);
+      
+      //----------------------------------------------------------------------
       //!  Disconnects the peer.
       //----------------------------------------------------------------------
       void Disconnect();
